change name to original name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Pac man</title>
+    <title>Puc-man!</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./app.js"></script>
   </head>
